--- a/recap.html
+++ b/recap.html
@@ -18,7 +18,7 @@
         <button id="my-btn">Go!</button>
     </div>
     <div>
-        <h2>Selected Stock: <span id="my-stock-display">TODO</span></h1>
+        <h2>Selected Stock: <span id="my-stock-display">TODO</span></h2>
     </div>
     <script type="text/javascript">
         console.log("Hello this is a review...")
@@ -27,13 +27,21 @@
         // ... 2) overwriting the heading placeholder with the selected stock symbol
 
 
-        var btn = document.getElementById("my-btn")
-        
-        function handleClick() {
-            console.log("You clicked me")
+        var myButton = document.getElementById("my-btn")
+        var inputUserName = document.getElementById("my-user-name")
+        var stockSelector = document.getElementById("my-stock-selector")
+        var stockDisplay = document.getElementById("my-stock-display")
+        function handleClick(){
+            console.log("YOU CLICKED ME")
+            console.log("USER NAME:", inputUserName.value)
+            console.log("STOCK SYMBOL:", stockSelector.value)
+            // update the page!
+            stockDisplay.innerText = stockSelector.value
         }
+        //handleClick()
+        myButton.addEventListener("click", handleClick, false)
 
-        btn.addEventListener("click", handleClick, false)
+
     </script>
 </body>
 </html>
